@@ -1,3 +1,9 @@
+2006-11-20  Daniel Wagner  <wagi@monom.org>
+
+	* freebob_set_samplerate: return value consitency fix. On success
+	it return 0 else -1. Reported by Jamie Gennis jgennis at gmail dot com
+	
+
 2006-11-12  Daniel Wagner  <wagi@monom.org>
 
 	* test mixer programm added.
